# mavka

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LambertW.vcxproj  LambertW.vcxproj.filters  MainMath.vcxproj  MainMath.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  com_example_mavka_angle_NativeCallsClass.h  mavka.sln  mavka.vcxproj  mavka.vcxproj.filters  pom.xml  task_9.ipynb
Debug/: mavka.exp  mavka.lib
LambertW.dir/Debug/: LambertW.dll.recipe  LambertW.ilk
LambertW.dir/Debug/LambertW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MainMath.dir/Debug/: MainMath.dll.recipe  MainMath.ilk
MainMath.dir/Debug/MainMath.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MainMath.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
mavka.dir/Debug/: mavka.dll.recipe  mavka.ilk
mavka.dir/Debug/mavka.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mavka.write.1u.tlog
src/main/java/com/example/mavka/calculate_c/: CMakeLists.txt  LambertW.cpp  LambertW.h  MainMath.cpp  MainMath.h  mavka.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+18 files in other folders)
